Add new test images

--- a/face_recognizer_pca_orl.ipynb
+++ b/face_recognizer_pca_orl.ipynb
@@ -365,7 +365,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Executando alguns testes..."
+    "Executando alguns testes...\n",
+    "\n",
+    "Testes com imagens do próprio dataset."
    ]
   },
   {
@@ -386,11 +388,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Aqui é um teste onde tirei novas fotos minha e que não foram usadas no treinamento.\n",
+    "\n",
+    "Uma das fotos é com máscara e o modelo errou.\n",
+    "\n",
+    "As fotos 997 e 998 são com oculos e 999 com máscara."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, its me!\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_img = load_dataset('TEST_IMG')\n",
+    "me2 = next((x for x in test_img if x.id == 997), None)\n",
+    "label, confidence = model.predict(me2.data)\n",
+    "\n",
+    "if label == 41:\n",
+    "    print('Yes, its me!')"
+   ]
   },
   {
    "cell_type": "markdown",
